// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cascading renders after microtaskTick 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, prepareList, safeOutput, withKey } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    const b3 = text(\` _ \`);
    const ctx1 = ctx;
    const [k_block4, v_block4, l_block4, c_block4] = prepareList(ctx['this'].state);
    for (let i1 = 0; i1 < l_block4; i1++) {
      let ctx = Object.create(ctx1);
      ctx["elem"] = k_block4[i1];
      const key1 = ctx['elem'].id;
      c_block4[i1] = withKey(safeOutput(ctx['elem'].id, node, key, "\\u00022", 1, key1), key1);
    }
    const b4 = list(c_block4);
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`Cascading renders after microtaskTick 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, \`Element\`, true, false, false, ["id"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["elem"] = k_block1[i1];
      const key1 = ctx['elem'].id;
      const skey1 = keyOf(key1);
      c_block1[i1] = withKey(comp1({id: ctx['elem'].id}, key + \`\\u00021\\u0002:\${skey1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`Cascading renders after microtaskTick 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.id, node, key, "\\u00021");
  }
}"
`;

exports[`a child re-rendered because its parent's pass was cancelled runs onWillUpdateProps once per new props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, safeOutput } = helpers;
  const comp1 = createComponent(app, \`Fast\`, true, false, false, ["value"]);
  const comp2 = createComponent(app, \`Slow\`, true, false, false, ["value"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/><i><block-child-2/></i></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
    const b3 = comp2({value: ctx['this'].state.value}, key + \`\\u00022\`, node, this, null);
    const b4 = safeOutput(ctx['this'].state.other, node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`a child re-rendered because its parent's pass was cancelled runs onWillUpdateProps once per new props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`a child re-rendered because its parent's pass was cancelled runs onWillUpdateProps once per new props 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`a render delayed by a rendering ancestor of another app resumes when that app renders 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Slow\`, true, false, false, ["value"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, []);
  const comp3 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/><block-child-2/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
    const b3 = comp2({}, key + \`\\u00022\`, node, this, null);
    const b4 = comp3({}, key + \`\\u00023\`, node, this, null);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`a render delayed by a rendering ancestor of another app resumes when that app renders 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`a render delayed by a rendering ancestor of another app resumes when that app renders 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`a root fiber whose node was patched through another render is dropped, not completed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`a single render below a rendering ancestor of another app is delayed too 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Slow\`, true, false, false, ["value"]);
  const comp2 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
    const b3 = comp2({}, key + \`\\u00022\`, node, this, null);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`a single render below a rendering ancestor of another app is delayed too 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`a single render below a rendering ancestor of another app is delayed too 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`another scenario with delayed rendering 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2, b3;
    b2 = text(\`A\`);
    if (ctx['this'].state.value<15) {
      b3 = comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
    }
    ctx["noop"] = ctx['this'].notify();
    return multi([b2, b3]);
  }
}"
`;

exports[`another scenario with delayed rendering 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    const b3 = comp1({}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`another scenario with delayed rendering 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  
  const block1_handlers = [hdlr_fn1];
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/></button>\`, block1_handlers);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    return block1([ctx], [b2], block1_handlers);
  }
}"
`;

exports[`async rendering > destroying a widget before start is over 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`calling render in destroy 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["fromA"]);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['key']);
    return toggler(tKey_1, comp1({fromA: ctx['this'].state}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
  }
}"
`;

exports[`calling render in destroy 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, ["fromA"]);
  
  return function template(ctx, node, key = "") {
    return comp1({fromA: ctx['this'].props.fromA}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`calling render in destroy 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`cancelled components are destroyed immediately 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = text(\`A\`);
    if (ctx['this'].state.flag) {
      b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`cancelled components are destroyed immediately 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`B\`);
    const b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`cancelled components are destroyed immediately 5`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`C\`);
  }
}"
`;

exports[`change state and call manually render: no unnecessary rendering 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`changing state before first render does not trigger a render (with parent) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`TestW\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.flag) {
      b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`changing state before first render does not trigger a render (with parent) 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`changing state before first render does not trigger a render 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`component destroyed just after render 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`component destroyed just after render 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`B\`);
    const b3 = safeOutput(ctx['this'].state.value, node, key, "\\u00021");
    return multi([b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 1 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 1 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentC\`, true, false, false, ["fromA","fromB"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].props.fromA,fromB: ctx['this'].state.fromB}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 1 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].someValue(), node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.fromA, node, key, "\\u00021");
    const b3 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00022\`, node, this, null);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentC\`, true, false, false, ["fromA","fromB"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].props.fromA,fromB: ctx['this'].state.fromB}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 2 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].props.fromB, node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 2bis 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 2bis 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentC\`, true, false, false, ["fromA","fromB"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].props.fromA,fromB: ctx['this'].state.fromB}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 2bis 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].props.fromB, node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 3 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 3 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentC\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].props.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 3 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentD\`, true, false, false, ["fromA","fromC"]);
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].props.fromA,fromC: ctx['this'].state.fromC}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 3 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<i><block-child-0/><block-child-1/></i>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].someValue(), node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 4 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 4 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentC\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].props.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 4 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentD\`, true, false, false, ["fromA","fromC"]);
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].props.fromA,fromC: ctx['this'].state.fromC}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 4 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<i><block-child-0/><block-child-1/></i>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].someValue(), node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 5 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 5 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].someValue(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 6 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 6 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].someValue(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 7 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 7 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/><block-child-1/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].someValue(), node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 8 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 8 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/><block-child-1/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].state.fromB, node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 9 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["fromA"]);
  const comp2 = createComponent(app, \`ComponentC\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/><block-child-2/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.fromA, node, key, "\\u00021");
    const b3 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00022\`, node, this, null);
    const b4 = comp2({fromA: ctx['this'].state.fromA}, key + \`\\u00023\`, node, this, null);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`concurrent renderings scenario 9 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 9 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentD\`, true, false, false, ["fromA","fromC"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].props.fromA,fromC: ctx['this'].state.fromC}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 9 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/><block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].props.fromC, node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 10 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, ["value"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 10 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentC\`, true, false, false, ["value"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.hasChild) {
      b2 = comp1({value: ctx['this'].props.value}, key + \`\\u00021\`, node, this, null);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 10 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].value, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 11 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({val: ctx['this'].state.valA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 11 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/>|<block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].val, node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 12 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({val: ctx['this'].val}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 12 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 13 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  const comp2 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    if (ctx['this'].state.bool) {
      b3 = comp2({}, key + \`\\u00022\`, node, this, null);
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`concurrent renderings scenario 13 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 14 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 14 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, ["fromB","fromA"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromB: ctx['this'].state.fromB,fromA: ctx['this'].props.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 14 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><span><block-child-0/></span><span><block-child-1/></span><span><block-child-2/></span></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].props.fromB, node, key, "\\u00022");
    const b4 = safeOutput(ctx['this'].state.fromC, node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`concurrent renderings scenario 15 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["fromA"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 15 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, ["fromB","fromA"]);
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({fromB: ctx['this'].state.fromB,fromA: ctx['this'].props.fromA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`concurrent renderings scenario 15 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><span><block-child-0/></span><span><block-child-1/></span><span><block-child-2/></span></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].props.fromB, node, key, "\\u00022");
    const b4 = safeOutput(ctx['this'].state.fromC, node, key, "\\u00023");
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`concurrent renderings scenario 16 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["fromA"]);
  
  return function template(ctx, node, key = "") {
    return comp1({fromA: ctx['this'].state.fromA}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`concurrent renderings scenario 16 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, ["fromB","fromA"]);
  
  return function template(ctx, node, key = "") {
    return comp1({fromB: ctx['this'].state.fromB,fromA: ctx['this'].props.fromA}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`concurrent renderings scenario 16 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`D\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3, b4, b5, b6, b7, b8;
    b2 = safeOutput(ctx['this'].props.fromA, node, key, "\\u00021");
    b3 = text(\`:\`);
    b4 = safeOutput(ctx['this'].props.fromB, node, key, "\\u00022");
    b5 = text(\`:\`);
    b6 = safeOutput(ctx['this'].state.fromC, node, key, "\\u00023");
    b7 = text(\`: \`);
    if (ctx['this'].state.fromC===13) {
      b8 = comp1({}, key + \`\\u00024\`, node, this, null);
    }
    return multi([b2, b3, b4, b5, b6, b7, b8]);
  }
}"
`;

exports[`concurrent renderings scenario 16 6`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`D\`);
  }
}"
`;

exports[`creating two async components, scenario 1 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ChildA\`, true, false, false, []);
  const comp2 = createComponent(app, \`ChildB\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    if (ctx['this'].state.flagA) {
      b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    }
    if (ctx['this'].state.flagB) {
      b3 = comp2({}, key + \`\\u00022\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`creating two async components, scenario 1 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].getValue(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`creating two async components, scenario 1 5`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>b</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`creating two async components, scenario 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ChildA\`, true, false, false, ["val"]);
  const comp2 = createComponent(app, \`ChildB\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = comp1({val: ctx['this'].state.valA}, key + \`\\u00021\`, node, this, null);
    if (ctx['this'].state.flagB) {
      b3 = comp2({val: ctx['this'].state.valB}, key + \`\\u00022\`, node, this, null);
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`creating two async components, scenario 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>a<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`creating two async components, scenario 2 5`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>b<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`creating two async components, scenario 3 (patching in the same frame) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ChildA\`, true, false, false, ["val"]);
  const comp2 = createComponent(app, \`ChildB\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = comp1({val: ctx['this'].state.valA}, key + \`\\u00021\`, node, this, null);
    if (ctx['this'].state.flagB) {
      b3 = comp2({val: ctx['this'].state.valB}, key + \`\\u00022\`, node, this, null);
    }
    return block1([], [b2, b3]);
  }
}"
`;

exports[`creating two async components, scenario 3 (patching in the same frame) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>a<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`creating two async components, scenario 3 (patching in the same frame) 5`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>b<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`delay willUpdateProps 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`delay willUpdateProps 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    const b3 = text(\`_\`);
    const b4 = safeOutput(ctx['this'].state.int, node, key, "\\u00022");
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`delay willUpdateProps with rendering grandchild 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Parent\`, true, false, false, ["state"]);
  
  return function template(ctx, node, key = "") {
    return comp1({state: ctx['this'].state}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`delay willUpdateProps with rendering grandchild 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`DelayedChild\`, true, false, false, ["value"]);
  const comp2 = createComponent(app, \`ReactiveChild\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].props.state.value}, key + \`\\u00021\`, node, this, null);
    const b3 = comp2({}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`delay willUpdateProps with rendering grandchild 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    const b3 = text(\`_\`);
    const b4 = safeOutput(ctx['this'].state.int, node, key, "\\u00022");
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`delay willUpdateProps with rendering grandchild 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`delayed fiber does not get rendered if it was cancelled 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`A\`);
    const b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed fiber does not get rendered if it was cancelled 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`B\`);
    const b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed fiber does not get rendered if it was cancelled 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`D\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`C\`);
    const b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed fiber does not get rendered if it was cancelled 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`D\`);
  }
}"
`;

exports[`delayed render does not go through when t-component value changed 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`A\`);
    const Comp1 = ctx['this'].state.component;
    const b3 = toggler(Comp1, comp1({}, key + \`\\u00021\`, node, this, Comp1));
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed render does not go through when t-component value changed 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`B\`);
    const b3 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed render does not go through when t-component value changed 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`C\`);
  }
}"
`;

exports[`delayed rendering, but then initial rendering is cancelled by yet another render 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`delayed rendering, but then initial rendering is cancelled by yet another render 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.someValue+ctx['this'].props.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`delayed rendering, but then initial rendering is cancelled by yet another render 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, safeOutput } = helpers;
  const comp1 = createComponent(app, \`D\`, true, false, false, []);
  
  let block3 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    const b4 = safeOutput(ctx['this'].props.value, node, key, "\\u00022");
    const b3 = block3([], [b4]);
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed rendering, but then initial rendering is cancelled by yet another render 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  
  const block1_handlers = [hdlr_fn1];
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/></button>\`, block1_handlers);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    return block1([ctx], [b2], block1_handlers);
  }
}"
`;

exports[`delayed rendering, destruction, stuff happens 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`A\`);
    const b3 = comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed rendering, destruction, stuff happens 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = text(\`B\`);
    if (ctx['this'].state.hasChild) {
      b3 = comp1({value: ctx['this'].state.someValue+ctx['this'].props.value}, key + \`\\u00021\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed rendering, destruction, stuff happens 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, safeOutput } = helpers;
  const comp1 = createComponent(app, \`D\`, true, false, false, []);
  
  let block4 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`C\`);
    const b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    const b5 = safeOutput(ctx['this'].props.value, node, key, "\\u00022");
    const b4 = block4([], [b5]);
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`delayed rendering, destruction, stuff happens 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  
  const block3_handlers = [hdlr_fn1];
  let block3 = createBlock(\`<button block-handler-0="click"><block-child-0/></button>\`, block3_handlers);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`D\`);
    const b4 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    const b3 = block3([ctx], [b4], block3_handlers);
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed rendering, reusing fiber and stuff 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`delayed rendering, reusing fiber and stuff 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    const b3 = comp1({}, key + \`\\u00022\`, node, this, null);
    ctx["noop"] = ctx['this'].notify();
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed rendering, reusing fiber and stuff 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  
  const block1_handlers = [hdlr_fn1];
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/></button>\`, block1_handlers);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    return block1([ctx], [b2], block1_handlers);
  }
}"
`;

exports[`delayed rendering, reusing fiber then component is destroyed and  stuff 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = text(\`A\`);
    if (ctx['this'].state.value<15) {
      b3 = comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed rendering, reusing fiber then component is destroyed and  stuff 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    const b3 = comp1({}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed rendering, reusing fiber then component is destroyed and  stuff 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  
  const block1_handlers = [hdlr_fn1];
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/></button>\`, block1_handlers);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    return block1([ctx], [b2], block1_handlers);
  }
}"
`;

exports[`delayed rendering, then component is destroyed and  stuff 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`delayed rendering, then component is destroyed and  stuff 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = safeOutput(ctx['this'].props.value, node, key, "\\u00021");
    if (ctx['this'].props.value<10) {
      b3 = comp1({}, key + \`\\u00022\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`delayed rendering, then component is destroyed and  stuff 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  
  const block1_handlers = [hdlr_fn1];
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/></button>\`, block1_handlers);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    return block1([ctx], [b2], block1_handlers);
  }
}"
`;

exports[`destroyed component causes other soon to be destroyed component to rerender, weird stuff happens 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["value"]);
  const comp2 = createComponent(app, \`C\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = text(\` A \`);
    if (ctx['this'].state.flag) {
      const b4 = comp1({value: ctx['this'].state.valueB}, key + \`\\u00021\`, node, this, null);
      const b5 = comp2({value: ctx['this'].state.valueC}, key + \`\\u00022\`, node, this, null);
      b3 = multi([b4, b5]);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`destroyed component causes other soon to be destroyed component to rerender, weird stuff happens 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["noop"] = ctx['this'].notify();
    return safeOutput(ctx['this'].props.value, node, key, "\\u00021");
  }
}"
`;

exports[`destroyed component causes other soon to be destroyed component to rerender, weird stuff happens 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].state.val+ctx['this'].props.value, node, key, "\\u00021");
  }
}"
`;

exports[`destroying/recreating a subcomponent, other scenario 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = text(\`parent\`);
    if (ctx['this'].state.hasChild) {
      b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`destroying/recreating a subcomponent, other scenario 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`destroying/recreating a subwidget with different props (if start is not over) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.val>1) {
      b2 = comp1({val: ctx['this'].state.val}, key + \`\\u00021\`, node, this, null);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`destroying/recreating a subwidget with different props (if start is not over) 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>child:<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`parent and child rendered at exact same time 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`parent and child rendered at exact same time 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.value, node, key, "\\u00021");
  }
}"
`;

exports[`properly behave when destroyed/unmounted while rendering  1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.flag) {
      b2 = comp1({val: ctx['this'].state.val}, key + \`\\u00021\`, node, this, null);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`properly behave when destroyed/unmounted while rendering  2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`SubChild\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({val: ctx['this'].props.val}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`properly behave when destroyed/unmounted while rendering  3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`rendering component again in next microtick 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, createComponent } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].onClick, ctx, ev);
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  const block1_handlers = [hdlr_fn1];
  let block1 = createBlock(\`<div><button block-handler-0="click">Click</button><block-child-0/></div>\`, block1_handlers);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.config.flag) {
      b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    }
    return block1([ctx], [b2], block1_handlers);
  }
}"
`;

exports[`rendering component again in next microtick 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>Child</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`rendering parent twice, with different props on child and stuff 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`rendering parent twice, with different props on child and stuff 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.value, node, key, "\\u00021");
  }
}"
`;

exports[`renderings, destruction, patch, stuff, ... yet another variation 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`B\`, true, false, false, ["value"]);
  const comp2 = createComponent(app, \`D\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`A\`);
    const b3 = comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
    const b4 = comp2({}, key + \`\\u00022\`, node, this, null);
    return multi([b2, b3, b4]);
  }
}"
`;

exports[`renderings, destruction, patch, stuff, ... yet another variation 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    b2 = text(\`B\`);
    if (ctx['this'].props.value===33) {
      b3 = comp1({}, key + \`\\u00021\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`renderings, destruction, patch, stuff, ... yet another variation 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  
  const block3_handlers = [hdlr_fn1];
  let block3 = createBlock(\`<p block-handler-0="click"><block-child-0/></p>\`, block3_handlers);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`D\`);
    const b4 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    const b3 = block3([ctx], [b4], block3_handlers);
    return multi([b2, b3]);
  }
}"
`;

exports[`renderings, destruction, patch, stuff, ... yet another variation 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].increment, ctx, ev);
  
  const block3_handlers = [hdlr_fn1];
  let block3 = createBlock(\`<span block-handler-0="click"><block-child-0/></span>\`, block3_handlers);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`C\`);
    const b4 = safeOutput(ctx['this'].state.val, node, key, "\\u00021");
    const b3 = block3([ctx], [b4], block3_handlers);
    return multi([b2, b3]);
  }
}"
`;

exports[`sibling rendering: child without willStart renders before async sibling 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ChildA\`, true, false, false, []);
  const comp2 = createComponent(app, \`ChildB\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    const b3 = comp2({}, key + \`\\u00022\`, node, this, null);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`sibling rendering: child without willStart renders before async sibling 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].log(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`sibling rendering: child without willStart renders before async sibling 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].log(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`slot content renders after microtick when child has willStart 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  const comp2 = createComponent(app, \`Sibling\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  let block2 = createBlock(\`<p><block-child-0/></p>\`);
  
  function slot1(ctx, node, key = "") {
    const b3 = safeOutput(ctx['this'].log(), node, key, "\\u00021");
    return block2([], [b3]);
  }
  
  return function template(ctx, node, key = "") {
    const b4 = comp1({slots: {"default": {__render: slot1, __ctx: ctx, __owner: this}}}, key + \`\\u00022\`, node, this, null);
    const b5 = comp2({}, key + \`\\u00023\`, node, this, null);
    return block1([], [b4, b5]);
  }
}"
`;

exports[`slot content renders after microtick when child has willStart 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callSlot(ctx, node, key + \`\\u00021\`, "default", false, null);
    return block1([], [b2]);
  }
}"
`;

exports[`slot content renders after microtick when child has willStart 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].log(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`slot content renders synchronously when child has no willStart 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, true, false, []);
  const comp2 = createComponent(app, \`Sibling\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  let block2 = createBlock(\`<p><block-child-0/></p>\`);
  
  function slot1(ctx, node, key = "") {
    const b3 = safeOutput(ctx['this'].log(), node, key, "\\u00021");
    return block2([], [b3]);
  }
  
  return function template(ctx, node, key = "") {
    const b4 = comp1({slots: {"default": {__render: slot1, __ctx: ctx, __owner: this}}}, key + \`\\u00022\`, node, this, null);
    const b5 = comp2({}, key + \`\\u00023\`, node, this, null);
    return block1([], [b4, b5]);
  }
}"
`;

exports[`slot content renders synchronously when child has no willStart 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callSlot } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = callSlot(ctx, node, key + \`\\u00021\`, "default", false, null);
    return block1([], [b2]);
  }
}"
`;

exports[`slot content renders synchronously when child has no willStart 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].log(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`superseded and destroyed renders > a component destroyed by an earlier onWillPatch of the same commit gets no onWillPatch 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`A\`, true, false, false, ["v"]);
  const comp2 = createComponent(app, \`B\`, true, false, false, ["v"]);
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({v: ctx['this'].state.v}, key + \`\\u00021\`, node, this, null);
    const b3 = comp2({v: ctx['this'].state.v}, key + \`\\u00022\`, node, this, null);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`superseded and destroyed renders > a component destroyed by an earlier onWillPatch of the same commit gets no onWillPatch 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<a><block-child-0/></a>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`superseded and destroyed renders > a component destroyed by an earlier onWillPatch of the same commit gets no onWillPatch 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<b><block-child-0/></b>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`superseded and destroyed renders > a component removed while its onWillUpdateProps is pending does not render 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Parent\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.show) {
      b2 = comp1({}, key + \`\\u00021\`, node, this, null);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`superseded and destroyed renders > a component removed while its onWillUpdateProps is pending does not render 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["v"]);
  
  return function template(ctx, node, key = "") {
    return comp1({v: ctx['this'].state.v}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`superseded and destroyed renders > a component removed while its onWillUpdateProps is pending does not render 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].read(ctx['this'].props.v), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`superseded and destroyed renders > a rejection of a superseded onWillUpdateProps is dropped, the newer update applies 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["v"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({v: ctx['this'].state.v}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`superseded and destroyed renders > a rejection of a superseded onWillUpdateProps is dropped, the newer update applies 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.v, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`superseded and destroyed renders > a root destroyed while its onWillStart is pending leaves no task behind 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`superseded and destroyed renders > an app destroyed by an onWillPatch hook applies nothing of that commit 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.show) {
      const props1 = {};
      b2 = comp1(props1, key + \`\\u00021\`, node, this, null);
    }
    return block1([], [b2]);
  }
}"
`;

exports[`superseded and destroyed renders > an app destroyed by an onWillPatch hook applies nothing of that commit 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<c/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-foreach with dynamic async component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey, keyOf } = helpers;
  const comp1 = createComponent(app, null, false, false, false, ["key"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].list);
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx["arr"] = k_block1[i1];
      ctx["arr_index"] = i1;
      const key1 = ctx['arr_index'];
      const skey1 = keyOf(key1);
      let b3;
      if (ctx['arr']) {
        const Comp1 = ctx['this'].myComp;
        b3 = toggler(Comp1, comp1({key: ctx['arr'][0]}, key + \`\\u00021\\u0002:\${skey1}\`, node, this, Comp1));
      }
      c_block1[i1] = withKey(multi([b3]), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`t-foreach with dynamic async component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-key on dom node having a component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, ["key"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].key);
    const Comp1 = ctx['this'].myComp;
    const b2 = toggler(tKey_1, toggler(Comp1, comp1({key: ctx['this'].key}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, Comp1)));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;

exports[`t-key on dom node having a component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.key, node, key, "\\u00021");
  }
}"
`;

exports[`t-key on dynamic async component (toggler is never patched) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, ["key"]);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].key);
    const Comp1 = ctx['this'].myComp;
    return toggler(tKey_1, toggler(Comp1, comp1({key: ctx['this'].key}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, Comp1)));
  }
}"
`;

exports[`t-key on dynamic async component (toggler is never patched) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.key, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`two renderings initiated between willPatch and patched 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, \`Panel\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.flag) {
      const tKey_1 = keyOf('panel_'+ctx['this'].state.panel);
      b2 = toggler(tKey_1, comp1({val: ctx['this'].state.panel}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, null));
    }
    return block1([], [b2]);
  }
}"
`;

exports[`two renderings initiated between willPatch and patched 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<abc><block-child-0/><block-child-1/></abc>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].mounted, node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`two sequential renderings before an animation frame 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    return comp1({value: ctx['this'].state.value}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`two sequential renderings before an animation frame 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.value, node, key, "\\u00021");
  }
}"
`;

exports[`update a sub-component twice in the same frame 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ChildA\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({val: ctx['this'].state.valA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`update a sub-component twice in the same frame 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`update a sub-component twice in the same frame, 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ChildA\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({val: ctx['this'].state.valA}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`update a sub-component twice in the same frame, 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].val(), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;
